@@ -10,7 +10,7 @@ import org.jsoup.nodes.Node;
  * create a start tag for a node, and tail to create the end tag.
  * </p>
  * <p>
- * For every node, the filter has to decide whether to
+ * For every node, the filter has to decide whether to:
  * <ul>
  * <li>continue ({@link FilterResult#CONTINUE}),</li>
  * <li>skip all children ({@link FilterResult#SKIP_CHILDREN}),</li>
@@ -50,9 +50,12 @@ public interface NodeFilter {
 
     /**
      * Callback for when a node is last visited, after all of its descendants have been visited.
+     * <p>This method has a default implementation to return {@link FilterResult#CONTINUE}.</p>
      * @param node the node being visited.
      * @param depth the depth of the node, relative to the root node. E.g., the root node has depth 0, and a child node of that will have depth 1.
      * @return Filter decision
      */
-    FilterResult tail(Node node, int depth);
+    default FilterResult tail(Node node, int depth) {
+        return FilterResult.CONTINUE;
+    }
 }
